# JavaArch-Guard

./: .gitignore  pyproject.toml
java-analyse-architecture/: .gitignore  MASTER_PROMPT.md  Prompt_inicial.md  README.md  pyproject.toml
java-analyse-architecture/.github/: copilot-instructions.md
java-analyse-architecture/agents/: classification-agent.md  coverage-orchestrator.md  dependency-graph-agent.md  discovery-agent.md  generation-agent.md  mutation-agent.md  repair-agent.md  reporting-agent.md  repository-intelligence-agent.md  stack-profile-agent.md  symbol-contract-agent.md
java-analyse-architecture/docs/: agent-json-protocol.md  archetype-policy.md  deterministic-architecture.md  developer-guide.md  implementation-guide.md  performance-tuning.md  python-pipeline.md  semantic-index-architecture.md  token-minimization-strategy.md
java-analyse-architecture/skills/00-runtime/: 02-phase-contracts.md  04-state-and-recovery.md  incremental-execution.md  semantic-index.md
java-analyse-architecture/skills/01-discovery/: archetype-detection.md  generated-code-exclusion.md  project-shape.md
java-analyse-architecture/skills/03-symbol-contract/: builder-verification.md  constructor-verification.md  method-verification.md
java-analyse-architecture/skills/04-dependency-graph/: repository-method-map.md
java-analyse-architecture/skills/05-fixture/: fixture-builder-strategy.md  fixture-cycle-safety.md
java-analyse-architecture/skills/05-fixtures/: fixture-catalog.md
java-analyse-architecture/skills/06-planning/: coverage-roi-planning.md
java-analyse-architecture/skills/07-generation/: ast-patch-generation.md  (+2 more)
java-analyse-architecture/tests/: test_deterministic.py
(+69 files in other folders)
