[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "javaarch-guard"
version = "0.3.0"
description = "Golden-Standard Microservice Guard — analisis arquitectonico hibrido determinista/LLM"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "JavaArch-Guard contributors" }]
keywords = ["langgraph", "microservices", "java", "static-analysis", "agents"]

dependencies = [
    "langgraph>=0.2.0",
    "anthropic>=0.40.0",
    "javalang>=0.13.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
javaarch-guard = "javaarch_guard.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gsmg*", "javaarch_guard*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
