[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "javaarch-guard"
version = "0.2.0"
description = "Guardian de Arquitectura y Deuda Tecnica para Java, orquestado con LangGraph (hibrido determinista)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
javaarch-guard = "javaarch_guard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/javaarch_guard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
